prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debian-test
spec:
  template:
    spec:
      containers:
      - name: debian-test
        env: prod
     #   - name: ENVIRONMENT
     #     value: e2e
