prod/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prod-ingress
  namespace: argocdprod
  annotations:
          # cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #    kubernetes.io/tls-acme: "true"
    #    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    # If you encounter a redirect loop or are getting a 307 response code 
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: argocd-server.polysign.io
  backend:
    serviceName: debian-test
    servicePort: 8080
  tls:
    - hosts:
      - argocd-server.rel.polysign.io
      secretName: tls-secret
